Fix sidenav notifications not showing

--- a/client/templates/app/nav/_nav.sass
+++ b/client/templates/app/nav/_nav.sass
@@ -1,7 +1,7 @@
 body.home, body.show-initiative
   nav
     background: transparent
-    z-index: 999
+    z-index: 998
     position: relative
     box-shadow: none
     
